# halves

./: halves.cabal
Data/: Halves.hs
Data/Halves/: FiniteBits.hs  Tuple.hs
src/Data/: Halves.hs
src/Data/Halves/: FiniteBits.hs
tests/: Props.hs
