name:                halves
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Brian McKenna
maintainer:          brian@brianmckenna.org
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.Halves
  build-depends:       base >=4.9 && <4.10
                     , lens
  default-language:    Haskell2010
